Fix padding on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -285,6 +285,11 @@ a:hover {
   padding: 25px 5px 10px 5px;
 }
 
+#sidebar-button:active,
+#sidebar-button:hover {
+  opacity: 0.7;
+}
+
 /*****************************************************************************/
 /*
 /* About page
