--- a/css/responsive.css
+++ b/css/responsive.css
@@ -33,6 +33,10 @@
     font-size: 0.75em;
   }
 
+  .content {
+    padding-right: 5em;
+  }
+
   .footer {
     font-size: 0.7em;
   }
@@ -67,6 +71,7 @@
 
   .content {
     z-index: 1;
+    padding-right: 2em;
   }
 
   #sidebar-button {
